force-app/main/default/objects/Student_Enrollment__c/fields/AI_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Priority_Score__c</fullName>
    <label>AI Priority Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>