force-app/main/default/objects/Student_Enrollment__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Student Enrollments</relationshipLabel>
    <relationshipName>Student_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>