force-app/main/default/objects/Student_Enrollment__c/validationRules/Lock_Record_While_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Record_While_Pending</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Approval_Status__c, &quot;Approved&quot;),
    NOT(ISCHANGED(Approval_Status__c))
)</errorConditionFormula>
    <errorMessage>This enrollment record is currently locked under management review and cannot be edited</errorMessage>
</ValidationRule>