force-app/main/default/objects/Student_Enrollment__c/validationRules/Valid_Discount_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Discount_Range</fullName>
    <active>true</active>
    <description>Ensures the discount percentage is between 0% and 100%.</description>
    <errorConditionFormula>OR(
    Discount_Percentage__c &lt; 0,
    Discount_Percentage__c &gt; 1.00
)</errorConditionFormula>
    <errorMessage>The discount percentage must be a value between 0% and 100%.</errorMessage>
</ValidationRule>